gemini api to use it

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ SUPABASE_KEY=your-anon-key
 WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
 WHATSAPP_ACCESS_TOKEN=your_access_token
 SUPPORT_PHONE_NUMBER=your_support_phone_number
+
+# Google Gemini AI (FREE - get from https://aistudio.google.com/apikey)
+GEMINI_API_KEY=your_gemini_api_key
