--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
@@ -16,6 +17,11 @@
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
-  "keywords": ["facebook", "webhook", "supabase", "whatsapp"],
+  "keywords": [
+    "facebook",
+    "webhook",
+    "supabase",
+    "whatsapp"
+  ],
   "license": "MIT"
 }
