need for fb secret for security

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ VERIFY_TOKEN=simai_verify_123
 
 # Facebook Page
 FB_PAGE_ACCESS_TOKEN=your_page_access_token
+# Facebook App Secret (for webhook signature verification - get from App Dashboard > Settings > Basic)
+FB_APP_SECRET=your_app_secret
 
 # Supabase
 SUPABASE_URL=https://your-project.supabase.co
